app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body,
:root {
  color: #fff;
  background-color: #222230;
  cursor: none;
}

html {
  scroll-behavior: smooth;
}

.cursor {
  position: fixed;
  top: 0;
  left: 0;
  width: 40px; 
  height: 40px; 
  background-color: rgba(0, 0, 0, 0.37);
  border-radius: 50%;
  pointer-events: none;
  transform: translate(-50%, -50%);
  z-index: 9999;
  display: flex;
  align-items: center;
  justify-content: center;
}

.cursor::after {
  content: "";
  width: 8px; 
  height: 8px; 
  background-color: #fcd34d;
  border-radius: 50%;
  position: absolute;
}



.navbar,
.landingPage,
.darkBg {
  background: linear-gradient(245deg, rgba(25,25,37,1) 0%, rgb(8, 3, 22) 52%, rgb(22, 7, 34) 100%);;
}

.navbar{
  position: fixed;
  height: 4rem;
}

.navbar header {
  max-width: none;

}

.navbar ul[data-justify="start"] li[data-active="true"] a {
  color: #fcd34d;
  font-weight: bold;
}

.navbar ul[data-justify="start"] a {
  position: relative;
  display: inline-block;
  overflow: hidden;
}

.navbar ul[data-justify="start"] a::after {
  content: "";
  position: absolute;
  left: 0;
  right: 100%;
  bottom: 0;
  height: 2px;
  background-color: rgb(252, 211, 77);
  transition: right 0.3s ease-out;
}

.navbar ul[data-justify="start"] a:hover {
  color: rgb(252, 211, 77);
}

.navbar ul[data-justify="start"] a:hover::after {
  right: 0;
}


.text-primary {
  color: white;
}

.xxl-profilePic{
  width: 600px;
  aspect-ratio: auto 800 / 1400;
  
}
.circularLight {
  background: repeating-radial-gradient(
    rgb(248, 248, 204),
    rgb(248, 248, 204) 5px,
    #222230 8px,
    #222230 100px
  );
}

.button {
  background-color: #222230;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  border: #fcd34dc4 solid 1px;
  border-radius: 10px;
  color: #fcd34dc4;
}

.button:hover {
  background-color: #fcd34dc4;
  color: #222230;
  font-weight: bold;
}

.embla{
  max-width: 51rem;
  margin-bottom: 1rem;
  margin-top: 2rem;
  --slide-height: 1rem;
  --slide-spacing: 1rem;
  --slide-size: 68%;
  position: relative;
}


.embla__viewport {
  width: 100%;
}
.embla__container {
  backface-visibility: hidden;
  display: flex;
  touch-action: pan-y pinch-zoom;
  margin-left: calc(var(--slide-spacing) * -1);
}
.embla__slide {
  position: relative;
  flex: 0 0 var(--slide-size);
  min-width: 0;
  padding-left: var(--slide-spacing);
}

.disabled {
  pointer-events: none;
  opacity: 0.3;
}

.embla__controls {
  display: flex;
  grid-template-columns: auto 1fr;
  justify-content: space-between;
  align-items: center;
  margin-top: 20px;
}
.embla__buttons {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 0.6rem;
  align-items: center;
}
.embla__button {
  -webkit-tap-highlight-color: rgba(var(--text-high-contrast-rgb-value), 0.5);
  -webkit-appearance: none;
  appearance: none;
  background-color: transparent;
  touch-action: manipulation;
  display: inline-flex;
  text-decoration: none;
  cursor: pointer;
  border: 0;
  padding: 0;
  margin: 0;
  box-shadow: inset 0 0 0 0.2rem var(--detail-medium-contrast);
  width: 3rem;
  height: 3rem;
  z-index: 1;
  border-radius: 50%;
  color: var(--text-body);
  display: flex;
  align-items: center;
  justify-content: center;
}
.embla__button:disabled {
  color: var(--detail-high-contrast);
}
.embla__button__svg {
  width: 65%;
  height: 65%;
  border: #fcd34d solid 2px;
  border-radius: 50%;
  padding: 0.5rem;
  color: #fcd34d;
}

.embla__button__svg:hover {
  border: #fcd34d solid 2px;
  background-color: #fcd34d;
  color: #222230;
}

.embla__dots {
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-end;
  align-items: center;
  margin-right: calc((2.6rem - 1.4rem) / 2 * -1);
}
.embla__dot {
  -webkit-tap-highlight-color: rgba(var(--text-high-contrast-rgb-value), 0.5);
  -webkit-appearance: none;
  appearance: none;
  touch-action: manipulation;
  display: inline-flex;
  text-decoration: none;
  cursor: pointer;
  border: #fcd34d solid 1px;
  padding: 0;
  margin: 0.1rem;
  width: 1rem;
  height: 1rem;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 50%;
}
.embla__dot:after {
  box-shadow: inset 0 0 0 0.2rem var(--detail-medium-contrast);
  width: 1.4rem;
  height: 1.4rem;
  border-radius: 50%;
  display: flex;
  align-items: center;
  content: "";
}
.embla__dot--selected {
  background-color: #fcd34d;
}
.embla__slide__number {
  backface-visibility: hidden;
}

@keyframes followCurve {
  0% {
    transform: translate(0, 0);
  }

  50% {
    transform: translate(50vw, -50vh);
  }
  100% {
    transform: translate(100vw, -50vh);
  }
}

.envelope {
  animation: followCurve 3s linear forwards;
}

.send {
  transform: translateY(-20vh);
}


.menuNavbar{
  height: 40vh !important;
  background-color: #222230;
}



/* .cross-fade img {
  position: absolute;
  opacity: 1;
  transition: opacity 0.25s ease-in-out;
}  */
/*
.cross-fade img:first-child {
  opacity: 1;
}

.cross-fade:hover img {
  opacity: 1;
}

.cross-fade:hover img:first-child {
  opacity: 0;
} */

.cross-fade-container {
  position: relative;
  width: 500px; /* Set the width */
  height: 300px; /* Set the height */
}

.cross-fade-container img {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  transition: opacity 0.35s ease-in-out;
  opacity: 1;
}

.cross-fade-container:hover .graduationImg{
  opacity: 0;
}

